--- a/pedia/templates/login.html
+++ b/pedia/templates/login.html
@@ -113,6 +113,12 @@
                 <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
 
             </form>
+            <!-- <button class="btn btn-primary mb-2">
+                <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
+            </button>
+            <button class="btn btn-primary mb-2">
+                <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+            </button> -->
         </main>
 
 
