--- a/pedia/templates/index.html
+++ b/pedia/templates/index.html
@@ -10,6 +10,6 @@
     welcome {{request.user}}
     <p>
         This is the best website on this planet and you are very lucky to access it</p>
-    <a href="/logout">Logout</a>
+    <a href="/accounts/logout/">Logout</a>
 </body>
 </html>
